Fixed page alignment.

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -3,6 +3,9 @@
     position: relative;
 }
 
+div {
+    text-align: left;
+  }
 
 .logo-container {
         position: absolute;
@@ -24,6 +27,8 @@
 .all-statuses{
     display:flex;
     flex-wrap: wrap;
+    width: 97%;
+    margin-left: 10px;
 }
 
 .posted-status-text{
@@ -88,14 +93,17 @@
 }
 
 .add-comment-header{
-    
+    position: relative;
+    left: 10px;
 }
 
 .comments{
     
-    margin-bottom: 5%;
+    margin-bottom: 0%;
     margin-top: 5%;
-    padding-left: 7%;     
+    padding-left: 6%;  
+    position: relative;
+    left: 10px;   
 }
 
 .comment-box {
@@ -107,9 +115,9 @@
 .comment-area {
     border: 1px solid lightgray;
     background-color: #f5f5f5;
-    width: 108%;
+    width: 115%;
     padding-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     border-radius: 5px;
     position: relative;
     
@@ -130,16 +138,17 @@
 
 .my-comment-text-area{
     border-radius: 5px;
-    width: 50%;
-    
+    width: 60%;
+    position: relative;
+    left: 10px;
 }
 
 .comment-help-block{
     
     font-size: 14px;
     font-family: Roboto;
-    
-    
+    position: relative;
+    left: 10px;
     color: rgb(163, 109, 109)
 }
 
@@ -148,6 +157,9 @@
     width: 77px;
     height: 38px;
     bottom: 10px;
+    position: relative;
+    left: 10px;
+    top: 10px;
     background: rgb(6, 203, 163);
     border-color: #06cba3;
     color: var(--bs-heading-color,inherit)
@@ -157,8 +169,10 @@
 
 
 .post-create-date{
-    /*position: absolute;*/
-    margin-left: 80%;
+    position: relative;
+    left: 5px;
+    bottom: 100px;
+    margin-left: 79%;
     margin-top: -12%;
     font-size: 14px;
     flex: 1;
@@ -167,18 +181,25 @@
 .status-post-text{
     font-size: 16px;
     font-family: Roboto;
+    position: relative;
+    bottom: 20px;
+    left: 10px;
     color: rgb(48, 50, 54);
     flex: 1;
     
 }
 
 .is-feeling-mood{
+    position: relative;
     font-weight: 100;
     padding-bottom: 2rem;
-    padding-top: .5rem;
+    top: -20px;
+    left: 10px;
+  
 }
 
 
+  
 
 
 
